tests/snapshots/cases/run@fallible_explicit_return.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/fallible_explicit_return.rv
---
exit: Some(0)
--- stdout
1
