tests/snapshots/cases/run@if_else.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/if_else.rv
---
exit: Some(0)
--- stdout
2
3
1
